[SCN-76] Профиль компании (#16)
../api/v1/company/profile [GET]
