# internal/entity/input.go
@@ -44,8 +44,6 @@ type (
 	CompanyInput struct {
 		Name              string `json:"name" binding:"required"`
 		Location          string `json:"location" binding:"required"`
-		FoundationDate    string `json:"foundationDate" binding:"required"`
-		NumberOfEmployees int    `json:"numberOfEmployees" binding:"required"`
 		ShortDescription  string `json:"shortDescription" binding:"required"`
 		FullDescription   string `json:"fullDescription" binding:"required"`
   }
